Revision history for VMware::vCloud

NB: Skipped version numbers were never released.

VERSIONTAG DATETAG

  Improved:
    examples/compose-vapp.pl - Now uses Term::Prompt fully.
    examples/create-vapp-from-template.pl - Now uses Term::Prompt fully.
    examples/poweron-vapp.pl - Now uses Term::Prompt fully.

v2.400 2013-05-03

  Improved:
    All examples are now actually bundled with distribution.

v2.390 2013-05-03

  Added:
    examples/list-datastores.pl
    VMware::vCloud - list_datastores(), progress_of_task()
    VMware::API::vCloud - datastore_list()

v2.380 2013-04-17

  Added:
    examples/get-template.pl

  Improved:
    examples/list-templates.pl - Better variable names for the example.
    Added 'Which "name" is which' to POD on VMware::API::vCloud
    Using Term::Prompt to ask for auth on example scripts.

  Fixed:
    VMware::API::vCloud - template_get(), vdc_get() - Missing match target on ternary.*
 
  * Problem found by David Gress

v2.370 2013-04-15

  Added:
    VMware::API::vCloud - vapp_recompose_add_vm()

  Improved:
    VMware::vCloud - get_template() - now returns hash or hashref in context
    VMware::API::vCloud - admin(), admin_extension_get(),
      admin_extension_vimServer_get(), catalog_get(), catalog_get_access(),
      org_get(), org_list(), pvdc_get(), task_get(), template_get(), 
      template_get_metadata(), vdc_get(), vdc_list(), vapp_get(), 
      vapp_get_metadata() - now use the core get() method

v2.360 2013-04-09

  Added:
    VMware::vCloud - delete_vapp(), create_vapp_from_sources()
    VMware::API::vCloud - vapp_create_from_sources(), vapp_create_from_template()

  Improved:
    Error's now die() with the returned "message" as well as the HTTP code.
    VMware::vCloud - Cache is automatically purged on delete actions.
    VMware::API::vCloud - org_get(), org_list(), vapp_get(), vdc_get() - now use the core get() method
    VMware::API::vCloud - get() now has level-3 debug of the request header
  
2.32 2013-03-29
